[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.9"
numpy = "^1.22.2"
Flask = "^2.0.3"
feedparser = "^6.0.8"
lxml = "^4.8.0"
requests = "^2.27.1"
mysql-connector-python = "^8.0.28"
cssselect = "^1.1.0"
cssselect2 = "^0.5.0"
ipython = "^8.1.1"
httpx = "^0.23.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"